# HarmonyFlow

./: .gitignore  README.md  build-profile.json5  oh-package.json5  transfer.bat
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: .gitignore  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: .gitignore  CMakeLists.txt  clip_infer_engine.cpp  clip_preprocessor.cpp  clipnative_napi.cpp  entry.cpp  main.cpp  opt_infer_engine.cpp  optnative_napi.cpp  tokenization.cpp
entry/src/main/cpp/headers/: clip_engine_helper.h  clip_infer_engine.h  clip_preprocessor.h  napi_util.h  opt_engine_helper.h  opt_infer_engine.h  tokenization.h
entry/src/main/cpp/headers/pytorch/include/ATen/: CPUFunctions_inl.h  CompositeExplicitAutogradFunctions_inl.h  Config.h  Functions.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
entry/src/main/cpp/headers/pytorch/include/ATen/core/: aten_interned_strings.h
entry/src/main/cpp/headers/pytorch/include/ATen/ops/: _scaled_dot_product_cudnn_attention.h  _scaled_dot_product_cudnn_attention_ops.h
entry/src/main/cpp/headers/pytorch/include/c10/core/: Scalar.h
entry/src/main/cpp/headers/pytorch/include/c10/macros/: Macros.h
entry/src/main/cpp/headers/pytorch/include/caffe2/core/: macros.h
entry/src/main/cpp/types/liboptnative/: index.d.ts  oh-package.json5
entry/src/main/ets/ServiceExtAbility/: ServiceExtAbility.ets
entry/src/main/ets/app/: AppPrefs.ets
entry/src/main/ets/common/: StyleConfiguration.ets
entry/src/main/ets/components/: DeleteItem.ets  KeyItem.ets  KeyItemGray.ets  KeyItemNumber.ets  KeyMenu.ets  NumberMenu.ets  ReturnItem.ets  SpaceItem.ets  SymbolMenu.ets  TopMenu.ets
entry/src/main/ets/components/basicUI/: DeleteItem.ets  KeyItem.ets  KeyItemGray.ets  (+7 more)
entry/src/main/ets/entryability/: EntryAbility.ets  ImeAbility.ets
entry/src/main/ets/lib/: FlowLocale.ets  Native.ets  Pointer.ets  Rect.ts  Unicode.ets  Validation.ets
entry/src/main/ets/model/: HardKeyUtils.ets  KeyboardController.ets  KeyboardKeyData.ets  Log.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: Log.ts
(+58 files in other folders)
